# DFT-using-CUDA

p3_CUDA/: CMakeLists.txt  Output256.txt  main.cu
p3_CUDA/src/: complex.cc  complex.cu
